# work-HiRo

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  lefthook.yaml  pyproject.toml
CR-DAgger/: README.md
EMP/: pyproject.toml
EMP/src/emp/playground/: emp1.py  emp2.py
GPT-O/: pyproject.toml
GPT-O/src/gpto/: __init__.py  curve.py  warp.py
GPT-O/src/gpto/demos/: __init__.py  demo2D_matplotlib.py  demo3D_matplotlib.py  demo3D_viser.py
GPT-O/src/gpto/plotting/: __init__.py  matplotlib.py  viser.py
GPT-O/src/gpto/transforms/: __init__.py  affine.py  gaussian_process.py
PACER/: README.md  pyproject.toml
PACER/experiments/pacer/: pacer_bc.py
PACER/src/deminf/: deminf.py
PACER/src/ileed/: __init__.py
PACER/src/manimations/: main.py
PACER/src/pacer/: __init__.py  analysis.py  base.py  bc.py  corruptions.py  experiments.py  gmm.py  pacer.py  plotting.py  testutils.py  typings.py  utils.py  visualisation.py
PACER/src/pacer/datasets/: __init__.py  corruptions.py  hopper.py  loader.py
PACER/src/pacer/datasets/interactive/: __init__.py  base.py  dataset.py  legacy.py  plugins.py
PACER/src/pacer/imitation/: __init__.py  base.py  core.py  diffusion.py  experiments.py  objective.py  policy.py  sequence.py  supervised.py
PACER/src/pacer/pacer/: __init__.py  analysis.py  base.py  binning.py  consensus.py  mode.py  pacer.py  pseudolabel.py  trust.py
PACER/src/pacer/pacer/trust/: __init__.py  base.py  kernels.py  legacy.py
PACER/src/pacer/phase/: __init__.py  estimation.py  pipeline.py
PACER/src/pacer/plotting/: __init__.py  artists.py  core.py  geometry.py  legacy.py  plots.py  styles.py
PACER/tests/deminf/: test_deminf.py  train_vaes.py
PACER/tests/pacer/: test_draw_interactive.py  test_pacer_bc.py  test_plots.py
PACER/tests/pacer/plots_pacer_bc/: .gitignore
TeX/: README.md  macros.tex  main.tex
TeX/mid-review/: references.bib  root.tex
TeX/notebook/: knowledge.tex  macros.tex
TeX/notebook/sections/: gaussian.tex  papers.tex
TeX/notebook/sections/papers/: ilosa.tex  pacer.tex
TeX/notebook/sections/papers/pacer/: _.tex
TeX/sections/: control.tex  imitation-learning.tex  papers.tex  titlepage.tex
TeX/sections/papers/: cr-dagger.tex  dagger.tex
TeX/thesis-presentation/: slides.tex
TeX/thesis-presentation/sections/: conclusion.tex  introduction.tex  methodology.tex  titlepage.tex
TeX/thesis-presentation/sections/results/: limitations.tex  results.tex
TeX/thesis-report/: root.tex
notebooks/: 2_train_dagger.ipynb  pyproject.toml
playground/CR-DAgger/: pyproject.toml
playground/CR-DAgger/src/cr_dagger/: __init__.py  base.py  dagger.py
playground/CR-DAgger/test/: test_1.py
playground/GPT-O/: README.md  pyproject.toml
playground/GPT-O/notebooks/: demo.ipynb
playground/GPT-O/src/gpto/: __init__.py  obstacle.py
playground/GPT-O/src/gpto/core/: __init__.py  transportation.py  typings.py
playground/GPT-O/src/gpto/demos/: demo3D_viser.py  demo3D_viser_2.py
playground/PACER/: README.md  pyproject.toml
playground/PACER/src/deminf/: __init__.py  deminf.py
playground/PACER/src/manimations/: README.md  main.py
playground/PACER/src/pacer/: __init__.py  base.py  base2.py  corruptions.py  deminf.py  demonstration.py  experiments.py  interactive.py  lasa.py  pacer.py  phase.py  plotting.py  testutils.py  trainers.py  typings.py  utils.py
playground/PACER/src/pacer/datasets/: __init__.py  interactive.py  lasa.py
playground/PACER/src/pacer/datasets/interactive/: __init__.py  base.py  dataset.py  legacy.py  plugins.py
playground/PACER/src/pacer/phase/: __init__.py  base.py  estimation.py  evaluation.py
playground/PACER/tests/: test_custom_demos.py  test_deminf.py  test_draw_interactive.py  test_lasa.py  test_pacer_bc.py  test_plots.py
playground/PACER/tests/deminf/: test_deminf.py  train_vaes.py
playground/PACER/tests/pacer/: test_draw_interactive.py  test_pacer_bc.py  test_plots.py
playground/TP-GPT/: README.md  pyproject.toml
playground/TP-GPT/src/tp_gpt/: __init__.py  base.py  curve.py  demo.py  demo3D.py  demo3D_viser_2.py  helpers.py  obstacle.py  plots.py  plotting.py  transportation.py  typings.py  warp.py
playground/TP-GPT/src/tp_gpt/core/: __init__.py  mappings.py  spaces.py  transportation.py  typings.py
playground/TP-GPT/src/tp_gpt/demos/: __init__.py  demo3D_matplotlib.py  demo3D_viser.py  demo3D_viser_2.py
playground/TP-GPT/src/tp_gpt/models/: __init__.py  affine_transform.py  gaussian_process.py
playground/TP-GPT/src/tp_gpt/plotting/: __init__.py  matplotlib.py  viser.py
playground/TP-GPT/src/tp_gpt/transforms/: __init__.py  affine.py  base.py  gaussian_process.py
playground/emp/: pyproject.toml
playground/emp/src/emp/playground/: emp3.py
playground/manimations/: pyproject.toml
playground/manimations/pacer/: main.py
