[project]
name = "work-hiro"
version = "0.1.0"
description = "work-HiRo"
readme = "README.md"
authors = [{ name = "Ashrith Sagar", email = "ashrithy@iisc.ac.in" }]
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["jupyter>=1.1.1", "nbdime>=4.0.4", "nbstripout>=0.9.1"]
lint = ["ruff>=0.15.14"]

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false

[tool.uv]
default-groups = "all"
