[project]
name = "pacer"
version = "0.1.0"
description = "Progress-Aligned Curation for Error-Resilient Imitation Learning"
readme = "README.md"
authors = [{ name = "Ashrith Sagar", email = "ashrithy@iisc.ac.in" }]
requires-python = ">=3.14"
dependencies = [
    "dtaidistance>=2.4.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "optype[numpy]>=0.17.1",
    "pygame>=2.6.1",
    "pylasahandwritingdataset>=0.2.1",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "torch>=2.12.0",
    "typingkit",
]

[project.optional-dependencies]
manim = ["manim>=0.20.1"]

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "microsoft-python-type-stubs",
    "pandas-stubs>=3.0.3.260530",
    "scipy-stubs>=1.17.1.5",
    "types-colorama>=0.4.15.20260508",
    "types-decorator>=5.2.0.20260519",
    "types-defusedxml>=0.7.0.20260504",
    "types-deprecated>=1.3.1.20260520",
    "types-html5lib>=1.1.11.20260518",
    "types-networkx>=3.6.1.20260518",
    "types-openpyxl>=3.1.5.20260518",
    "types-pexpect>=4.9.0.20260518",
    "types-protobuf>=7.34.1.20260518",
    "types-pygments>=2.20.0.20260518",
    "types-python-dateutil>=2.9.0.20260518",
    "types-pywin32>=311.0.0.20260521",
    "types-pyyaml>=6.0.12.20260518",
    "types-setuptools>=82.0.0.20260518",
    "types-tabulate>=0.10.0.20260508",
    "types-tqdm>=4.67.3.20260518",
    "types-webencodings>=0.5.0.20260408",
    "types-xlrd>=2.0.0.20260518",
]
lint = ["ruff>=0.15.16"]
test = ["pytest>=9.0.3", "pytest-memray>=1.8.0"]
typecheck = [
    "basedpyright>=1.39.7",
    "mypy[mypyc]>=2.1.0",
    "pycroscope>=0.4.0",
    "pyrefly>=1.0.0",
    "pyright>=1.1.410",
    "ty>=0.0.46",
    "zuban>=0.8.2",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false

[tool.ruff.lint]
ignore = ["F403", "F405"]

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }
typingkit = { git = "https://github.com/AshrithSagar/typingkit.git", rev = "main" }
pylasahandwritingdataset = { git = "https://github.com/AshrithSagar/pyLASAHandwritingDataset.git", rev = "main" }
