[project]
name = "notebooks"
version = "0.1.0"
description = "Notebooks"
authors = [{ name = "Ashrith Sagar", email = "ashrithy@iisc.ac.in" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gymnasium==0.29.1",
    "imitation==1.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "nbdime>=4.0.2",
    "nbstripout>=0.8.1",
    "numpy>=2.3.4",
    "rich>=14.2.0",
]
