[project]
name = "cr-dagger"
version = "0.1.0"
description = "Compliant Residual DAgger"
readme = "README.md"
authors = [{ name = "Ashrith Sagar", email = "ashrithy@iisc.ac.in" }]
requires-python = ">=3.12"
dependencies = [
    "gymnasium[mujoco]",
    "gymnasium-robotics",
    "matplotlib",
    "mujoco",
    "mujoco-python-viewer",
    "numpy",
    "pybind11-stubgen",
    "rich",
    "robot-descriptions",
    "scipy",
    "torch",
    "stable-baselines3",
    "franka-sim",
    "pin",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["jupyter"]
