[project]
name = "pacer"
version = "0.1.0"
description = "Progress-Aligned Curation for Error-Resilient Imitation Learning"
readme = "README.md"
authors = [{ name = "Ashrith Sagar", email = "ashrithy@iisc.ac.in" }]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "optype[numpy]>=0.17.0",
    "pygame>=2.6.1",
    "pylasahandwritingdataset>=0.1.3",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "typingkit",
]

[project.optional-dependencies]
manim = ["manim>=0.20.1"]

[dependency-groups]
dev = [
    "microsoft-python-type-stubs",
    "pandas-stubs>=3.0.0.260204",
    "scipy-stubs>=1.17.1.1",
    "types-colorama>=0.4.15.20250801",
    "types-defusedxml>=0.7.0.20250822",
    "types-deprecated>=1.3.1.20260130",
    "types-networkx>=3.6.1.20260303",
    "types-openpyxl>=3.1.5.20250919",
    "types-pexpect>=4.9.0.20260127",
    "types-protobuf>=6.32.1.20260221",
    "types-pygments>=2.19.0.20251121",
    "types-python-dateutil>=2.9.0.20260305",
    "types-pywin32>=311.0.0.20251008",
    "types-pyyaml>=6.0.12.20250915",
    "types-setuptools>=82.0.0.20260210",
    "types-tabulate>=0.10.0.20260308",
    "types-tqdm>=4.67.3.20260303",
    "types-xlrd>=2.0.0.20251020",
]
lint = ["ruff>=0.15.6"]
test = ["pytest>=9.0.2", "pytest-memray>=1.8.0"]
typecheck = [
    "basedpyright>=1.38.2",
    "mypy[mypyc]>=1.19.1",
    "pyrefly>=0.56.0",
    "pyright>=1.1.408",
    "ty>=0.0.23",
]

[build-system]
requires = ["uv_build>=0.10.9"]
build-backend = "uv_build"

[[tool.mypy.overrides]]
module = "pylasadataset.*"
ignore_missing_imports = true

[tool.ruff.lint]
ignore = ["F403", "F405"]

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }
typingkit = { git = "https://github.com/AshrithSagar/typingkit.git", rev = "main" }
pylasahandwritingdataset = { git = "https://github.com/AshrithSagar/pyLASAHandwritingDataset.git", rev = "main" }
