[project]
name = "emp"
version = "0.1.0"
description = "Elastic Motion Policy"
readme = "README.md"
authors = [{ name = "Ashrith Sagar", email = "ashrithy@iisc.ac.in" }]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "typed-numpy",
]

[dependency-groups]
dev = ["microsoft-python-type-stubs", "scipy-stubs>=1.17.0.1"]
lint = ["ruff>=0.14.11"]
typecheck = ["basedpyright>=1.37.1", "mypy>=1.19.1", "pyright>=1.1.408"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }
typed-numpy = { git = "https://github.com/AshrithSagar/typed-numpy.git", rev = "main" }
