[project]
name = "manimations"
version = "0.1.0"
description = "Manimations"
readme = "README.md"
authors = [{ name = "Ashrith Sagar", email = "ashrithy@iisc.ac.in" }]
requires-python = ">=3.13"
dependencies = ["manim>=0.19.2"]

[dependency-groups]
lint = ["ruff>=0.15.0"]
typecheck = [
    "basedpyright>=1.37.4",
    "mypy>=1.19.1",
    "pyrefly>=0.51.1",
    "pyright>=1.1.408",
    "ty>=0.0.15",
]
