[project]
name = "manimations"
version = "0.1.0"
description = "Manimations"
readme = "README.md"
authors = [{ name = "Ashrith Sagar", email = "ashrithy@iisc.ac.in" }]
requires-python = ">=3.14"
dependencies = [
    "manim>=0.19.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pylasadataset>=0.1.1",
    "rich>=14.3.3",
    "scipy>=1.17.0",
    "typed-numpy",
]

[dependency-groups]
dev = ["microsoft-python-type-stubs", "scipy-stubs>=1.17.0.2"]
lint = ["ruff>=0.15.1"]
typecheck = [
    "basedpyright>=1.38.1",
    "mypy>=1.19.1",
    "pyrefly>=0.53.0",
    "pyright>=1.1.408",
    "ty>=0.0.17",
]

[tool.ruff.lint]
ignore = ["F403", "F405"]

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }
typed-numpy = { git = "https://github.com/AshrithSagar/typed-numpy.git", rev = "main" }
